[FEATURE]: ADDDED ROUTING TO THE PROJECT

--- a/index.html
+++ b/index.html
@@ -56,10 +56,12 @@
 
 </head>
 <body class="compact-menu page-sidebar-fixed">
-<main class="page-content content-wrap" ng-controller="controller.global" ng-cloak>
+<main class="page-content content-wrap" ng-controller="controller.global" >
     <!-- Main Content -->
     <div class="container-fluid">
-        <div class="main-container" ng-view></div>
+        <div class="main-container" ng-view>
+            
+        </div>
     </div>
 </main>
 
